# SoftwareDevelopmentWithAI

./: .gitignore  README.md
demos/cpp/url-monitor-cli/: PROGRESS.md  README.md
demos/cpp/url-monitor-cli/steps/step-6-implement-phase2/: CMakeLists.txt
demos/cpp/url-monitor-cli/steps/step-6-implement-phase2/src/: logger.cpp  logger.h  main.cpp
demos/cpp/url-monitor-cli/steps/step-6-implement-phase2/tests/: test_monitor.cpp
demos/cpp/url-monitor-cli/steps/step-6-implement-phase2/thoughts/qrspi/2026-07-12-url-monitor-cpp/: structure.md
demos/live/report-generator/: README.md
demos/live/url-monitor-cli-cpp/: .gitignore  CMakeLists.txt
demos/live/url_monitor_cli_cpp/: CMakeLists.txt  CODE_REVIEW.md  README.md
demos/live/url_monitor_cli_cpp/.cursor/hooks/: block-delete.sh  block-rm.sh
demos/live/url_monitor_cli_cpp/.cursor/rules/: project-scope.mdc
demos/live/url_monitor_cli_cpp/config/: example.yaml
demos/live/url_monitor_cli_cpp/src/: checker.cpp  config.hpp  main.cpp  monitor.cpp  monitor.hpp  state.cpp  state.hpp
demos/live/url_monitor_cli_cpp/tests/: test_stats.cpp
demos/live/url_monitor_cli_cpp/thoughts/qrspi/2026-07-14-url-monitor-cli/: answers.md  plan.md  questions.md  structure.md
demos/python/brain-cli/: CLAUDE.md  DEMO.md  pyproject.toml
demos/python/brain-cli/.claude/agents/: cli-dev.md  code-reviewer.md  entity-dev.md  pattern-enforcer.md  product-manager.md  qa.md  search-dev.md  storage-dev.md
demos/python/brain-cli/rules/: cli.md  entities.md  patterns.md  search.md  storage.md
demos/python/brain-cli/src/brain_cli/: cli.py  models.py
demos/python/brain-cli/src/brain_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
demos/python/brain-cli/src/brain_cli/entities/: extractor.py
demos/python/brain-cli/src/brain_cli/search/: engine.py
demos/python/brain-cli/src/brain_cli/storage/: store.py
demos/python/shrinking/: process_batch.py  pyproject.toml
demos/python/shrinking/shrinking_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demos/python/shrinking/tests/: test_process_batch.py
demos/python/url-monitor-cli/: AGENTS.md  README.md  pyproject.toml
demos/python/url-monitor-cli/.cursor/rules/: pydantic-settings.mdc
demos/python/url-monitor-cli/.cursor/skills/question/: SKILL.md
demos/python/url-monitor-cli/src/url_monitor/: __main__.py  checker.py  config.py
demos/python/url-monitor-cli/tests/: test_checker.py  test_cli.py
demos/python/url-monitor-cli/thoughts/qrspi/2026-06-11-url-uptime-monitor/: answers.md  design.md  plan.md  structure.md  task.md
demos/python/url-monitor-service-reference/: AGENTS.md  ARCHITECTURE.md  README.md  goal.md  pyproject.toml
demos/python/url-monitor-service-reference/.cursor/: hooks.json
demos/python/url-monitor-service-reference/.cursor/hooks/: no-default-args.sh
demos/python/url-monitor-service-reference/.cursor/rules/: check-engine.mdc  modules-overview.mdc  pydantic-settings.mdc  structured-errors.mdc
demos/python/url-monitor-service-reference/.cursor/semgrep/: no-default-args.yaml
demos/python/url-monitor-service-reference/.cursor/skills/worktree/: SKILL.md
demos/python/url-monitor-service-reference/app/: exceptions.py  settings.py
demos/python/url-monitor-service-reference/app/db/: connection.py  helpers.py  schema.sql
demos/python/url-monitor-service-reference/app/repositories/: monitors.py
demos/python/url-monitor-service-reference/app/routers/: health.py  monitors.py  status.py
demos/python/url-monitor-service-reference/app/schemas/: checks.py
demos/python/url-monitor-service-reference/app/services/: checker.py
demos/python/url-monitor-service-reference/docs/skills/: 3_design.md
demos/python/url-monitor-service-reference/tests/: curl_integration.sh  curl_integration_report.md  test_api_history.py  test_api_monitors.py  test_scheduler.py
demos/python/url-monitor-service-reference/thoughts/qrspi/2026-06-14-url-monitor-api/: answers.md  design.md  plan.md  questions.md  task.md
demos/shrinking_demo/: process_batch.py  shrinking_demo.py
demos/url_monitor_cli_demo_cpp/: goal.md
demos/url_monitor_cli_demo_cpp/.claude/: settings.json
demos/url_monitor_service_reference/: AGENTS.md  url_monitor.db
demos/url_monitor_service_reference/app/: dependencies.py  main.py
demos/url_monitor_service_reference/tests/: conftest.py  test_api_monitors.py  test_checker.py  test_health.py  test_integration.py
exercises/brain-cli/: README.md  SPEC.md
exercises/cpp/fill_bucket_testing/: fill_bucket.cpp
exercises/cpp/parser_code_review/: Makefile  README.md  expr.cpp  expr.h  main.cpp  parser.cpp  parser.h  tests.cpp
exercises/cpp/parser_code_review_oop/: Makefile  expr.cpp  expr.h  main.cpp  parser.cpp  parser.h
exercises/cpp/url-monitor-cli/: README.md
exercises/exercise_0/: Monthly_Report_Template.xlsx  README.md
exercises/exercise_01/: generate_repo.py
exercises/exercise_02/: solution.md
exercises/exercise_concurrent_agents/: main.py
exercises/exercise_image_comparison/: README.md
(+131 files in other folders)
