[project]
name = "brain-cli"
version = "0.1.0"
description = "A CLI-based Second Brain personal knowledge management system"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "chromadb>=0.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
brain = "brain_cli.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
