[project]
name = "shrinking-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["hypothesis>=6.0", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["process_batch", "shrinking_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
