[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "url-monitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
url-monitor = "url_monitor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/url_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
